# basel-wasm

./: .bazelrc  README.md  rebuild_all.sh
hello/: .bazelrc  MODULE.bazel  README.md  bazel-bin  bazel-hello  bazel-out  bazel-testlogs
hello/lib/utils/: BUILD.bazel
hello/lib/utils/src/: lib.rs
hello/src/hello/: BUILD.bazel  main.rs
wasi_with_hermetic_cc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-wasi_with_hermetic_cc  build.sh
wasi_with_hermetic_cc/adder/: BUILD.bazel
wasi_with_hermetic_cc/adder/src/: main.rs
wasi_with_hermetic_cc/calculate/: BUILD.bazel
wasi_with_hermetic_cc/calculate/src/: main.rs
wasi_with_hermetic_cc/run-me/: BUILD.bazel  run_hello.sh
wasm_basel/: AGENT_FEEDBACK_MOTOR_DISABILITY.md  BUILD.bazel  Cargo.toml  HISTORY.md  MODULE.bazel  README.PURE_BAZEL.md  README.md  WASIPREVIEW_README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-wasm_basel
wasm_basel/adder/: BUILD.bazel  Cargo.toml
wasm_basel/adder/src/: bindings.rs  lib.rs
wasm_basel/adder/wit/: add.wit
wasm_basel/calculate/: BUILD.bazel  Cargo.toml
wasm_basel/calculate/src/: bindings.rs  lib.rs
wasm_basel/calculate/wit/: calculate.wit
wasm_basel/run-me/: BUILD.bazel  Cargo.toml  compose.sh  deploy.sh  eval_expression.sh  hello.wasm  index.html  index.ts  jco.sh  package-lock.json  package.json  run_hello.sh  run_with_jco.sh  run_with_wac.sh  webpack.config.js
wasm_basel/run-me/jco/: hello.core.wasm  hello.core3.wasm  hello.core4.wasm  hello.d.ts  hello.js
wasm_basel/run-me/jco/interfaces/: docs-adder-add.d.ts  docs-adder-types.d.ts  docs-calculate-calculate.d.ts  wasi-filesystem-types.d.ts
wasm_basel/run-me/src/: bindings.rs  main.rs
wasm_basel/run-me/wit/: runme.wit
