# Root BUILD for pure Bazel flow
exports_files(["Cargo.toml"])

filegroup(
    name = "workspace_srcs",
    srcs = glob(["**"], exclude = [
        "bazel-*/**",
        "bazel-bin/**",
        "bazel-out/**",
        "bazel-testlogs/**",
        "target/**",
        "node_modules/**",
        ".git/**",
        ".idea/**",
        "**/*.zip",
        "**/*.tar*",
    ]),
    visibility = ["//visibility:public"],
)
