load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "adder_bin",
    srcs = ["src/main.rs"],
    edition = "2021",
)

genrule(
    name = "adder.component.wasm.pure",
    srcs = [":adder_bin"],
    outs = ["adder.component.wasm"],
    cmd = "cp $(location :adder_bin) $@",
    visibility = ["//visibility:public"],
)
