load("@rules_rust//rust:defs.bzl", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_shared_library(
    name = "calculate_core",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs", "src/*.rs"]),
    edition = "2021",
    deps = ["@crates//:wit-bindgen-rt"],
)

genrule(
    name = "calculate.component.wasm.pure",
    srcs = [
        ":calculate_core",
        "@wasi_preview1_reactor_adapter//file",
    ] + glob(["wit/**/*.wit", "wit/*.wit"]),
    outs = ["calculate.component.wasm"],
    cmd = """
set -euo pipefail
CORE="$(location :calculate_core)"
ADAPTER="$(location @wasi_preview1_reactor_adapter//file)"
OUT="$@"

# Componentize core wasm using the WASI preview1 *reactor* adapter
wasm-tools component new "$$CORE" --adapt wasi_snapshot_preview1="$$ADAPTER" -o "$$OUT"
""" ,
    tags = ["requires-wasm-tools"],
)
