load("@rules_rust//rust:defs.bzl", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_shared_library(
    name = "calculate_core",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs", "src/*.rs"]),
    edition = "2021",
    deps = ["@crates//:wit-bindgen-rt"],
    platform = "@rules_rust//rust/platform:wasi",
    )

genrule(
    name = "calculate.component.wasm.pure",
    srcs = [":calculate_core", "//third_party:wasi_adapters/wasi_snapshot_preview1.command.wasm"] + glob(["wit/**/*.wit", "wit/*.wit"]),
    outs = ["calculate.component.wasm"],
    cmd = """
set -euo pipefail
CORE="$(location :calculate_core)"
ADAPTER="$(location //third_party:wasi_adapters/wasi_snapshot_preview1.command.wasm)"
OUT="$@"

# Componentize core wasm using the preview1 adapter (module imports wasi_snapshot_preview1)
wasm-tools component new "$$CORE" --adapt wasi_snapshot_preview1="$$ADAPTER" -o "$$OUT"
""" ,
    tags = ["requires-wasm-tools"],
)
