[package]
name = "calculate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package =  "docs:calculate"

[package.metadata.component.target]
path = "wit"


[package.metadata.component.target.dependencies]

"docs:adder" = { path = "../adder/wit" }
# this import's the config from another wasm 
